add product done with middlewares
